@@ -1,5 +1,6 @@
 ------------------------  RELEASE 1.10.1  -----------------------
 
+* Fix regression with Audio3DManager.setSoundVelocityAuto()
 * Audio3DManager accepts tuple in setSoundVelocity/setListenerVelocity
 
 ------------------------  RELEASE 1.10.0  -----------------------
